--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
           <div
             class="nav-info align-items-center d-flex justify-content-between toggleBtn"
           >
-            <span class="mr-lg-1"
+            <span class="mr-lg-1 me-2"
               ><i class="fas fa-shopping-cart"></i
             ></span>
+            <span class="badge rounded-pill bg-info">0</span>
           </div>
         </div>
       </nav>
@@ -42,27 +43,6 @@
         <!-- cart-items -->
         <div class="cart-items text-capitalize my-5">
           <!-- Show products in cart-->
-          <!-- <div
-            class=" d-flex align-items-center justify-content-around py-2"
-          >
-            <img src="/candy.jpg" class="cart-img" id="item-img" alt="" />
-            <span class="item-title">Fjällraven Backpack</span>
-            <span id="cart-item-price" class="cart-item-price" class=""
-              >10.99</span
-            >
-            <span>SEK</span>
-            <div class="d-flex">
-              <div class="cart-quantity-btn cart-quantity-decrement">-</div>
-              <div class="cart-quantity-container position-relative">
-                <input type="number" value="1" class="cart-quantity-input" />
-                <div class="cart-quantity-num">1</div>
-              </div>
-              <div class="cart-quantity-btn cart-quantity-increment">+</div>
-            </div>
-            <button id="cart-item-remove" class="btn cart-item-remove my-auto">
-              <i class="fas fa-trash"></i>
-            </button>
-          </div> -->
         </div>
 
         <!-- cart total -->
